Add lexer function

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # Editor IDE
 .vscode/
-idea/
+.idea/
 
 # Created by https://www.gitignore.io/api/go
 # Edit at https://www.gitignore.io/?templates=go
