--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -4,7 +4,7 @@ before:
 builds:
 - env:
   - CGO_ENABLED=0
-  main: ./cmd/main.go
+  main: ./cmd/*.go
   binary: gorillang
 archives:
 - replacements:
