--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,9 @@
 .vscode/
 .idea/
 
+# Dist
+dist/
+
 # Created by https://www.gitignore.io/api/go
 # Edit at https://www.gitignore.io/?templates=go
 
