--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,9 @@
 .vscode/
 .idea/
 
-# Dist
+# binary
 dist/
+cmd
 
 # Created by https://www.gitignore.io/api/go
 # Edit at https://www.gitignore.io/?templates=go
