--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -11,9 +11,9 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Setup Go
-      uses: actions/setup-go@v1
+      uses: actions/setup-go@v2
       with:
-        go-version: 1.13.x
+        go-version: 1.15
 
     - name: Run unit test
       run: make test
@@ -35,15 +35,15 @@ jobs:
       run: git fetch --prune --unshallow
 
     - name: Set up Go
-      uses: actions/setup-go@v1
+      uses: actions/setup-go@v2
       with:
-        go-version: 1.13.x
+        go-version: 1.15
 
     - name: Run GoReleaser
-      uses: goreleaser/goreleaser-action@v1
+      uses: goreleaser/goreleaser-action@v2
       with:
         version: latest
         args: release --rm-dist
-        key: ${{ secrets.MY_PERSONAL_TOKEN }}
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        HOMEBREW_TAP_GITHUB_TOKEN: ${{ secrets.HOMEBREW_TAP_GITHUB_TOKEN }}
